--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,7 +13,7 @@ jobs:
         python-version: 3.9
         
     - name: Install HissDB
-      run: python3 -m pip install ..
+      run: python3 -m pip install hissdb
       
     - name: Install test dependencies
       run: python3 -m pip install pytest pytest-cov pytest-github-actions-annotate-failures quickjs markdown
